# ds160-visa-simulator

./: .dockerignore  .env.example  .gitignore  AGENTS.md  Dockerfile  LICENSE  Makefile  README.md  chainlit_app.py  docker-compose.yml  pyproject.toml
.chainlit/: config.toml
.gemini/: settings.json
.gemini/agents/: trellis-check.md  trellis-implement.md  trellis-research.md
.trellis/: .template-hashes.json
app/: __init__.py  main.py
app/agents/: adjudication_agent.py  document_review_agent.py  extractor_agent.py  knowledge_tools.py  model_factory.py  question_agent.py  review_agent.py  schemas.py  scoring_agent.py  tools.py  user_model_config.py
app/cli/: main.py
app/core/: app_version.py  dependencies.py  health.py  logging_config.py  settings.py  simple_auth.py  visa_families.py
app/db/: evidence_models.py  models.py  session.py
app/domain/: agent_runtime.py  case_memory.py  contracts.py  document_types.py  evidence.py  knowledge_plane.py  rag.py  runtime.py
app/evals/: __init__.py  advisory_scorers.py  replay_runner.py  (+1 more)
deploy/: README.md
docker/: start.sh
docs/: API.md  README.md  f1-demo-live-validation-protocol.md  runtime-contracts.md  wechat-miniprogram-mvp.md
miniprogram/: app.js  app.json  app.wxss  project.config.json
scripts/: agent-runtime-canary-smoke.sh  batch_refusal_probe.py  deploy-web-hotfix.sh  dev-down.sh  dev-logs.sh  dev-status.sh  dev-up.sh  f1_demo_material_package.py  production-recover-combined.sh  production-release-preloaded-image.sh  production-split-postgres-cutover.sh  ui_browser_smoke.sh
tests/: conftest.py
web/: .env.example  eslint.config.mjs  next.config.mjs  package.json  pnpm-lock.yaml  tsconfig.tsbuildinfo
(+371 files in other folders)
