[project]
name = "ds160-visa-simulator"
version = "0.1.0"
description = "Backend-first DS-160 visa simulator v1"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.116.0,<0.117.0",
  "uvicorn>=0.35.0,<0.36.0",
  "pydantic>=2.11.0,<2.12.0",
  "pydantic-settings>=2.10.0,<2.11.0",
  "sqlalchemy>=2.0.41,<2.1.0",
  "python-multipart>=0.0.20,<0.0.21",
  "pyyaml>=6.0.2,<6.1.0",
  "pymupdf>=1.26.0,<1.27.0",
  "python-docx>=1.2.0,<1.3.0",
  "pillow>=11.3.0,<11.4.0",
  "pytesseract>=0.3.13,<0.4.0",
  "httpx>=0.28.1,<0.29.0"
]

[dependency-groups]
dev = [
  "pytest>=8.4.1,<8.5.0",
  "pytest-asyncio>=1.1.0,<1.2.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
